--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>My super-App</title>
+    <link rel="stylesheet" href="css/vendor.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <div id="app"></div>
